# hCM

./: .gitignore  CHANGELOG.md  Makefile  README.md  hCM.cabal
app/: Example.hs  Main.hs
src/CM/: CodeConversion.hs  Helpers.hs  Metamodel.hs  Validity.hs  Visualization.hs
